--- a/GlosarioMartaO/style.css
+++ b/GlosarioMartaO/style.css
@@ -1,68 +1,14 @@
 /*PASA LA VALIDACION W3*/
-/*MOBILE FIRST*/
-
-
-/*html, body{
-  width: 100vw;
-  
-  
-}
-
-body{
-  position: fixed;
-  background-color: red;
-  height: 10000px;
-}
-
-header{
-  height: 100%;
-     
-}
-.head{
-  
-  width: 100%;
-  
-}
-#blog .contendor{
-  display:flex;
-  flex-wrap: wrap;
-  width:100vw;
-
-}
-section{
-  width:100%;
-  
-}
-#blog article{
-  width:100%;
-}
-#blog p{
-  width:80%
-}
-
-#blog img{
-    
-  display: flex;
-  flex-direction: column;
-  margin-left: 30%;
-  width: 100%;
-  
-  
-}*/
-
 /* For mobile phones: */
-
-
 
 *{
   margin: 0;
   padding: 0;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  
+  font-family: Verdana, Geneva, Tahoma, sans-serif; 
 }
 /*HEADER*/
 header{
-  height: 100px;
+  height: 100%;
   width: 100vw;
   background: #4D4D5C;
   padding: 0 50px;
@@ -135,7 +81,6 @@ section{
   justify-content: center;
   width:100%;
   margin-bottom: 25px;
-
 }
 /*BANNER*/
 #banner{
@@ -156,17 +101,12 @@ section{
   /*border: solid black 2px;*/
   color: #333;
   text-align: center;
-  
-
 }
 #banner h2{
   font-size: 28px;
-  
-  
 }
 #bienvenidos{
-  text-align: center;
-  
+  text-align: center; 
 }
 
 /*BLOG*/
@@ -196,7 +136,6 @@ margin-bottom: 2%;
 margin-left: 1%;
 color: #6cc091;
 width: 90%;
-
 }
 #blog h4{
 text-align: center;
@@ -211,29 +150,25 @@ line-height: 1.6;
 margin-top: 25px;
 margin-left: 40px;
 margin-right: 10px;
-     
 }
 
 #blog article{
 margin:15px;
 background-color: #fff;
 border-radius: 10px;
-
-
 }
 
 #blog img{
 /*float:left;*/
 display: flex;
 flex-direction: column;
-margin-left: 7%;
+margin-left: 20%;
 width: 100%;
 max-width: 200px;
 /*padding-right: 10px;*/
 margin-top: 2%;
 /*margin-bottom: 2%;
 margin-left: 2%;*/
-
 }
 
 .volver{
@@ -242,10 +177,7 @@ color: rgb(161, 112, 112);
 margin-bottom: 10%;
 margin-top: 10%;
 padding: 10px;
-
-
 }
-
 
 /*FOOTER*/
 .pie-pagina{
@@ -262,14 +194,12 @@ grid-template-columns: repeat(3, 1fr);
 padding: 20px 0px;
 color:#6cc091;
 text-align: center;
-
 }
 .mapa{
 display: flex;
 justify-content: center;
 align-items: center;
 width: 100%;
-
 }
 
 .red-social{
@@ -280,118 +210,17 @@ width:80%;
 height: 50%;
 /*width: 600px;
 height: 100px;*/
-
-
 }
 
 .red-social img{
   height: 20%;
-
 }
 .pie-pagina .grupo-2{
 text-align: center; 
 }
 
-@media only screen and (min-width: 600px) {
-*{
-  margin: 0;
-  padding: 0;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  
-}
-/*HEADER*/
-header{
-  height: 100%;
-  background: #4D4D5C;
-  padding: 0 50px;
-  color: #fff;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.logo{
-  text-transform: uppercase;
-  color: #6cc091;
-  font-weight: 200;
-}
-.menu a{
-  color: rgb(161, 112, 112);
-  text-transform: uppercase;
-  text-decoration: none;
-  padding: 0 10px;
-  transition: 0.4s;
-}
-.mostrar-menu,
-.esconder-menu{
-  font-size: 10px;
-  cursor: pointer;
-  display: none;
-  transition: 0.4s;
-}
-
-.mostrar-menu{
-  order:1;
-}
-.menu a:hover,
-.mostrar-menu:hover,
-.esconder-menu:hover{
-  color: #6cc091;
-}
-#check{
-  display:none;
-}
-
-/*BODY*/
-.head{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 63px;
-  background: #171717;
-  position: fixed;
-  width: 100%;
-  z-index: 100;
-}
-.nav{
-  display: flex;
-  list-style-type: none;
-  margin-right: 10px;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-section{
-  width:100%;
-  margin-bottom: 25px;
-
-}
-/*BANNER*/
-#banner{
-  margin-top: 50px;
-  position: relative;
-  display:flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  /*background-color: purple;*/
-}
-#banner img{
-  width: 50%;
-  height: auto;
-}
-  #banner .contenedor {
-  width: 100%;
-  /*border: solid black 2px;*/
-  color: #333;
-  text-align: center;
-
-}
-#banner h2{
-  font-size: 28px;
-  
-}
-#bienvenidos{
-  text-align: center;
-}
+/*Full screen*/
+@media only screen and (min-width: 1388px) {
 
 /*BLOG*/
 
@@ -405,32 +234,7 @@ margin: 20px auto;
 background-color: rgba(52, 175, 169, 0.74);
 }
 
-#blog h1{
-text-align: center;
-position: relative;
-color: #6cc091;
-
-}
-#blog h4{
-text-align: center;
-position: relative;
-padding-top: 15px;
-}
-#blog p{
-vertical-align: top;
-margin-bottom: 1rem;
-font-size: inherit;
-line-height: 1.6;
-margin-top: 25px;
-margin-left: 50px;
-margin-right: 10px;
-     
-}
-
 #blog article{
-margin:15px;
-background-color: #fff;
-border-radius: 10px;
 width:47%;
 }
 
@@ -444,43 +248,12 @@ padding-right: 10px;
 margin-top: 2%;
 margin-bottom: 2%;
 margin-left: 2%;
-
 }
-
-.volver{
-text-align: center;
-color: rgb(161, 112, 112);
-margin-bottom: 10%;
-margin-top: 10%;
-padding: 10px;
-
-
-}
-
 
 /*FOOTER*/
-.pie-pagina{
-width: 100%;
-background-color: #4D4D5C;
-}
 
 .pie-pagina .grupo-1{
 width: 100%;
-max-width: 1000px;
-margin: auto;
-display: grid;
-grid-template-columns: repeat(3, 1fr);
-padding: 20px 0px;
-color:#6cc091;
-text-align: center;
-
-}
-.mapa{
-display: flex;
-justify-content: center;
-align-items: center;
-width: 100%;
-
 }
 
 .red-social{
@@ -490,15 +263,9 @@ justify-content: space-around;
 margin-right: 5px;
 width: 600px;
 height: 100px;
-
-
 }
 
 .red-social img{
   height: 45%;
-
-}
-.pie-pagina .grupo-2{
-text-align: center; 
 }
 }
